# zquant

./: .env  .env.example  .gitignore  .impeccable.md  AGENTS.md  Cargo.toml  QUICKSTART.md  README.md  docker-compose.yml
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: code-worker.md  implement.md
.kilocode/workflows/: create-command.md  start.md
.kiro/specs/zquant-enterprise-evolution-roadmap/: .config.kiro  design.md
.trellis/: .gitignore
.trellis/spec/: README.md
.trellis/spec/backend/: akshare-dataset-contracts.md  data-pipeline-contracts.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  jobs-and-errors.md  logging-guidelines.md  migrations.md  postgres-queries.md  postgres-schema.md  quality-guidelines.md  rust-coding-guidelines.md  services.md  type-safety.md
.trellis/spec/desktop/: app-shell-guidelines.md  architecture-boundaries.md  index.md  parquet-archive-guidelines.md  renderer-bevy-guidelines.md  windows-runtime-guidelines.md  workspace-state-guidelines.md
.trellis/spec/frontend/: app-state.md  bevy-rendering.md  component-guidelines.md  directory-structure.md  egui-ui.md  hook-guidelines.md  impeccable-guidelines.md  index.md  performance.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  index.md  review-checklist.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/03-13-akshare-provider-phase-b/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/03-13-fix-pipeline-review/: check.jsonl  prd.md  task.json
.trellis/tasks/03-13-pipeline-real-persist-phase-c/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/03-13-unified-data-pipeline-v1/: implement.jsonl  prd.md  task.json
.trellis/tasks/03-14-03-14-pipeline-observability-phase-c/: check.jsonl  task.json
.trellis/tasks/03-14-backend-logs-health-api/: prd.md  task.json
.trellis/tasks/03-14-web-data-explorer-selection-store/: prd.md  task.json
.trellis/tasks/03-14-web-left-sidebar-watchlist/: prd.md  task.json
.trellis/tasks/03-14-web-topbar-controls-refresh/: prd.md  task.json
.trellis/tasks/03-14-web-workspace-controls-job-actions/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/03-15-frontend-optimistic-ui/: prd.md  task.json
.trellis/tasks/03-15-ws-bridge-jobs-logs/: implement.jsonl  prd.md  task.json
.trellis/tasks/03-16-03-16-frontend-agent-panel/: prd.md  task.json
.trellis/tasks/03-16-03-16-frontend-style-system/: check.jsonl  prd.md  task.json
.trellis/tasks/03-17-03-17-backend-rust-coding-guidelines/: prd.md  task.json
.trellis/tasks/03-17-03-17-backend-rust-error-depth/: prd.md  task.json
.trellis/tasks/03-17-03-17-backend-spec-completion/: task.json
.trellis/tasks/03-17-03-17-frontend-impeccable-spec/: prd.md  task.json
.trellis/tasks/03-17-03-17-m2-renderer-bevy-integration/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/03-17-03-17-m3-storage-layering-parquet/: debug.jsonl  implement.jsonl  prd.md  task.json
apps/desktop-app/: Cargo.toml
apps/desktop-app/src/: main.rs
apps/job-api/: Cargo.toml
apps/job-api/src/: main.rs
apps/job-cache-consumer/: Cargo.toml
apps/job-cache-consumer/src/: main.rs
apps/job-kernel/: Cargo.toml
apps/job-kernel/src/: main.rs
apps/job-runner/: Cargo.toml
apps/job-ws-bridge/: Cargo.toml
apps/job-ws-bridge/src/: main.rs
crates/app-shell/: Cargo.toml
crates/app-shell/src/: app.rs  health.rs  lib.rs  notification.rs  recovery.rs
crates/application-core/: Cargo.toml
crates/application-core/src/: facade.rs  lib.rs
crates/data-pipeline-application/: Cargo.toml
crates/data-pipeline-application/examples/: pipeline_demo.rs
crates/data-pipeline-application/python/: akshare_cn_equity_ohlcv_daily.py  pytdx_cn_equity_ohlcv_daily.py  test_chinese_column_mapping.py  test_pytdx_contract.py
crates/data-pipeline-application/src/: events.rs  job_handler.rs  lib.rs  manager.rs  metrics.rs  normalizer.rs  persist.rs  provider_registry.rs  python_runner.rs  quality_gate.rs  route_resolver.rs
crates/data-pipeline-application/src/providers/: akshare.rs  mock.rs  mod.rs  pytdx.rs
crates/data-pipeline-application/tests/: integration_test.rs
crates/data-pipeline-domain/: Cargo.toml
crates/domain-workspace/: Cargo.toml
crates/domain-workspace/src/: lib.rs
crates/infra-parquet/: Cargo.toml
crates/infra-parquet/src/: lib.rs  partition.rs  reader.rs  writer.rs
crates/job-application/: Cargo.toml
crates/job-application/src/: agent_supervisor.rs  api.rs  lib.rs  runner.rs  ws.rs
crates/job-application/tests/: datasources_api_test.rs  jobs_api_test.rs  ws_test.rs
crates/job-cache-redis/: Cargo.toml
crates/job-cache-redis/src/: lib.rs
crates/job-domain/: Cargo.toml
crates/job-events/: Cargo.toml
crates/job-events/src/: bus.rs  bus_tests.rs  types.rs
crates/job-observability/: Cargo.toml
crates/job-observability/src/: lib.rs
crates/job-store-pg/: Cargo.toml
crates/job-store-pg/src/: lib.rs
crates/job-store-pg/tests/: e2e_test.rs  pg_store_phase1.rs
crates/jobs-runtime/: Cargo.toml
crates/jobs-runtime/src/: lib.rs
crates/repository-market/: Cargo.toml
crates/repository-market/examples/: fetch_cn_daily.rs
crates/repository-market/src/: error.rs  gap.rs  hot_store.rs  lib.rs
crates/store-manifest/: Cargo.toml
crates/store-manifest/src/: lib.rs
crates/ui-workbench/: Cargo.toml
crates/ui-workbench/src/: lib.rs
deploy/: docker-compose.yml
deploy/postgres/: pg_hba.conf
docs/archive/: README.md  findings.md  progress.md  task_plan.md
docs/data/: 统一数据管道骨架设计说明_合并正式版.md
docs/job/: phase1_windows_eda_kernel_plan.md  rust_job_module.md
docs/reaserch/: rust_qlib方案
docs/web/: zquant_企业版标准规划方案.md  zquant_最小前端架构与UI_Vue版.md
migrations/: 0001_jobs.sql  0002_phase1.sql  20260317000001_workspace_snapshots.sql  20260317000002_partition_manifest.sql
scripts/: test_job_store_pg_docker.ps1
web/: package-lock.json  package.json
web/src/: App.vue  main.ts  style.css
(+162 files in other folders)
