[workspace]
members = [
    "apps/*",
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["WebQuant Team"]
license = "MIT"

[workspace.dependencies]

tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"
anyhow = "1"
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"

axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

rdkafka = { version = "0.36", features = ["tokio"] }

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

config = "0.14"
dotenvy = "0.15"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5"

metrics = "0.22"
metrics-exporter-prometheus = "0.13"
