[package]
name = "job-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
job-application = { path = "../../crates/job-application" }
job-observability = { path = "../../crates/job-observability" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
