[package]
name = "job-cache-consumer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
job-cache-redis = { path = "../../crates/job-cache-redis" }
job-events = { path = "../../crates/job-events" }
job-observability = { path = "../../crates/job-observability" }
tokio.workspace = true
tracing.workspace = true
