[package]
name = "job-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "job-kernel"
path = "src/main.rs"

[dependencies]
job-application = { path = "../../crates/job-application" }
job-domain = { path = "../../crates/job-domain" }
job-events = { path = "../../crates/job-events" }
job-store-pg = { path = "../../crates/job-store-pg" }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
axum.workspace = true
async-trait.workspace = true
serde_json.workspace = true
