[package]
name = "data-pipeline-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
metrics.workspace = true
uuid = { version = "1.0", features = ["v4"] }
tokio = { workspace = true, features = ["process", "io-util", "time", "fs"] }

data-pipeline-domain = { path = "../data-pipeline-domain" }
job-domain = { path = "../job-domain" }
job-events = { path = "../job-events" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber.workspace = true
tempfile = "3"
