[package]
name = "job-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
job-domain = { path = "../job-domain" }
job-store-pg = { path = "../job-store-pg" }
job-events = { path = "../job-events" }
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
serde.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures = "0.3"
uuid = { workspace = true, features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.24"
