[package]
name = "job-cache-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
