[package]
name = "job-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

rdkafka = { workspace = true, optional = true }

[features]
default = []
kafka = ["dep:rdkafka"]
