[package]
name = "job-store-pg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
job-domain = { path = "../job-domain" }
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
