[package]
name = "jobs-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
