[package]
name = "store-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
infra-parquet = { path = "../infra-parquet" }

anyhow.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
