[package]
name = "ui-workbench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
application-core = { path = "../application-core" }
jobs-runtime = { path = "../jobs-runtime" }

egui = "0.27"
egui_plot = "0.27.2"

tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
